--- a/CameraOpenGl/CameraOpenGl.vcxproj.filters
+++ b/CameraOpenGl/CameraOpenGl.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="stb_image.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Camera.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="shaderLoader.h">
